# formatclip

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/core/: config.py
backend/app/services/: formatter_service.py
backend/app/services/providers/: groq_provider.py  mock_provider.py  openai_provider.py
backend/formatclip_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_format.py  test_health.py  test_providers.py
docs/: demo-script.md
extension/: README.md  biome.json  package-lock.json  package.json  wxt.config.ts
extension/src/components/: ActionBar.tsx  EmptyState.tsx  FormatPanel.tsx  InstructionInput.tsx  ResultPanel.tsx  SnippetCard.tsx  SnippetInput.tsx  SnippetList.tsx
extension/src/entrypoints/sidepanel/: App.tsx  index.html  main.tsx  style.css
extension/src/hooks/: useSnippets.ts
extension/src/lib/: api.ts  snippets.ts  storage.ts  types.ts
