[project]
name = "formatclip-backend"
version = "0.1.0"
description = "Mock backend API for FormatClip."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "openai",
    "pydantic",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
